--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,18 @@
         android:theme="@style/AppTheme">
 
         <meta-data android:name="DATABASE" android:value="telaborapp.db" />
-        <meta-data android:name="VERSION" android:value="1" />
+        <meta-data android:name="VERSION" android:value="2" />
         <meta-data android:name="QUERY_LOG" android:value="true" />
         <meta-data  android:name="DOMAIN_PACKAGE_NAME" android:value="com.jrevata.teclaborapp.models"/>
 
-        <activity android:name=".activities.ResultActivity"></activity>
-        <activity android:name=".activities.TestActivity" />
+        <activity android:name=".activities.ResultActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.TestActivity" android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activities.LoginActivity" android:theme="@style/AppTheme.NoActionBar2"/>
         <activity android:name=".activities.MainActivity"  android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
