--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.0.9'
+
 }
